--- a/css/app.css
+++ b/css/app.css
@@ -7817,6 +7817,7 @@ body.orsay-player--show #app,
 body.orsay-player--show .modal,
 body.orsay-player--show .helper {
   visibility: hidden;
+  display: none;
 }
 body.orsay-player--show .player {
   background: transparent;
