--- a/css/app.css
+++ b/css/app.css
@@ -7821,7 +7821,7 @@ body.orsay-player--show .helper {
 body.orsay-player--show #app *,
 body.orsay-player--show .modal *,
 body.orsay-player--show .helper * {
-  visibility: hidden;
+  visibility: hidden !important;
 }
 body.orsay-player--show .player {
   background: transparent;
